<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Know This Room</string>
    <string name="gplus_connect">Connect to G+</string>
    <string name="gplus_disconnect">Disconnect from G+</string>
    <string name="add_room">Add room</string>
    <string name="delete_room">Delete room</string>
    <string name="update_room">This is where I am:</string>
    <string name="update_room_not_found">"I don't know yet&#8230;"</string>
    <string name="update_room_wrong_btn">Wrong room?</string>
    <string name="add_room_instruction">Room name:</string>
    <string name="delete_room_headline">Really delete room?</string>
    <string name="update_room_headline">Do you really want to update this with the current data in the censors room?</string>
    <string name="detailed_room_headline">"Details of "</string>
    <string name="detailed_tower_header">CellTower info:</string>
    <string name="detailed_wifi_header">Wifi info:</string>
    
    <string name="details_room_visible_networks">Visible Networks</string>
    <string name="details_room_bsid">BSID</string>
    <string name="details_room_strength">Strength</string>
    
    <string name="dummytext">Dummy need text!</string>
    
    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="settings_category_posting">Posting to web</string>
    <string name="settings_post_to_weblink">Server of own choice</string>
    <string name="settings_server_weblink">Specify your receiving server</string>
    <string name="settings_post_to_gplus_moments">G+ moments</string>
    <string name="settings_post_to_gplus_stream">G+ stream</string>
    
    <string name="eating_potato">Etar potatis</string>
    <string name="thinking_up_stupid_names">"Thinking up stupid names"</string>
    <string name="cleaning_tea_cup">"Cleaning tea-cup"</string>
    <string name="Implementing_NSA">"Implementing NSA backdoor!"</string>
    <string name="scraping_of_dog">"Removing your fleas."</string>
    <string name="teaching_jonas">"Teaching Jonas to saxophone."</string>
    <string name="broadcasting_pos">"Broadcasting your position on Gooogle</string>
    
    <string-array name="gplus_logon">
        <item>@string/eating_potato</item>
        <item>@string/thinking_up_stupid_names</item>
        <item>@string/cleaning_tea_cup</item>
        <item>@string/Implementing_NSA</item>
        <item>@string/scraping_of_dog</item>
        <item>@string/teaching_jonas</item>
        <item>@string/broadcasting_pos</item>
    </string-array>
    
</resources>
